[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-interview-orchestrator"
version = "0.2.0"
description = "Distributed AI interview orchestration framework with Celery, Redis, and PostgreSQL."
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["orchestrator*", "workers*", "monitoring*", "database*"]
